Fix plugin to work on Java 11.